--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "new_record_shop",
   "version": "1.0.0",
-  "description": "",
   "main": "collector.js",
   "scripts": {
     "test": "mocha specs"
@@ -10,5 +9,17 @@
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.16.1"
-  }
+  },
+  "devDependencies": {
+    "mocha": "^3.0.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Leerlawrence/new_record_store.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Leerlawrence/new_record_store/issues"
+  },
+  "homepage": "https://github.com/Leerlawrence/new_record_store#readme",
+  "description": ""
 }
